# Raytracer

./: .gitmodules  CMakeLists.txt  README.md
include/: canvas.h  colour.h  constants.h  display.h  engine.h  matrix.h  ray.h  sphere.h  tuple.h
src/: canvas.c  colour.c  display.c  engine.c  main.c  matrix.c  ray.c  sphere.c  tuple.c
tests/: CMakeLists.txt  canvasTest.c  colourTest.c  matrixTest.c  rayTest.c  sphereTest.c  testing.c  tupleTest.c  vectorTest.c
